# vulkan_engine

./: .gitignore  Cargo.toml  LICENSE  README.md
shaders/: shader.vert
shaders/debug/: depth.frag  depth.vert  mesh_view.vert  normal.frag
shaders/material/: simple.frag  simple.vert
src/: application.rs  camera.rs  engine.rs  lib.rs  vulkan_context.rs
src/engine/: ecs.rs  input_handler.rs  material.rs  mesh.rs  pipeline_manager.rs  render_object.rs  renderer.rs  scene.rs  transform.rs  vulkan.rs
src/engine/ecs/: components.rs
src/engine/material/: material_manager.rs  simple_material.rs
src/engine/mesh/: primitives.rs
src/engine/pipeline_manager/: shader_loader.rs
