[package]
name = "vulkan_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = {version = "0.29.2", features = ["rwh_05"]}
glam = {version = "0.24.2", features = ["bytemuck"]}
smallvec = "1.11.1"
anyhow = "1.0.75"
json = "0.12.4"
